--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 import org.apache.tools.ant.filters.ReplaceTokens
 
-
 plugins {
 	id 'org.jetbrains.kotlin.jvm' version '2.0.0'
 	id 'io.github.goooler.shadow' version '8.1.7' apply false
@@ -21,9 +20,25 @@ allprojects {
 	repositories {
 		mavenCentral()
 
+		// ✅ Only use SpongePowered for Kyori artifacts like translatable
+		maven {
+			url = "https://repo.spongepowered.org/maven/"
+			content {
+				includeGroup "net.kyori"
+			}
+		}
+
 		maven { url = "https://oss.sonatype.org/content/repositories/snapshots/" }
 		maven { url = "https://repo.aikar.co/content/groups/aikar/" }
-		maven { url = "https://papermc.io/repo/repository/maven-public/" }
+
+		// ❌ Exclude Kyori from PaperMC repo (optional but recommended)
+		maven {
+			url = "https://papermc.io/repo/repository/maven-public/"
+			content {
+				excludeGroup "net.kyori"
+			}
+		}
+
 		maven { url = "https://repo.extendedclip.com/content/repositories/placeholderapi/" }
 		maven { url = "https://repo.glaremasters.me/repository/public/" }
 	}
@@ -64,6 +79,7 @@ apply plugin: 'io.github.goooler.shadow'
 
 shadowJar {
 	minimize()
+
 	relocate("co.aikar.commands", "me.clip.voteparty.libs.acf")
 	relocate("co.aikar.locales", "me.clip.voteparty.libs.locales")
 	relocate("ch.jalu.configme", "me.clip.voteparty.libs.configme")
@@ -72,9 +88,9 @@ shadowJar {
 	relocate("com.cryptomorin.xseries", "me.clip.voteparty.libs.xseries")
 	relocate("kotlin", "me.clip.voteparty.libs.kotlin")
 	relocate("org.bstats", "me.clip.voteparty.libs.bstats")
+
 	archiveFileName = "VoteParty-${project.version}.jar"
 }
-
 
 dependencies {
 
@@ -100,6 +116,8 @@ dependencies {
 	implementation 'net.kyori:adventure-platform-bukkit:4.3.3'
 	implementation 'net.kyori:adventure-api:4.17.0'
 	implementation 'net.kyori:adventure-text-minimessage:4.17.0'
+	implementation 'net.kyori:adventure-text-serializer-legacy:4.17.0'
+	implementation 'net.kyori:examination-api:1.3.0'
 
 	implementation project(":version")
 	implementation project(":version_old")
